--- a/package.json
+++ b/package.json
@@ -1,47 +1,44 @@
 {
-  "name": "saintcat-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@auth/prisma-adapter": "^2.8.0",
-    "@headlessui/react": "^2.2.0",
-    "@prisma/client": "6.4.1",
-    "bcrypt": "^5.1.1",
-    "lucide-react": "^0.477.0",
-    "next": "15.2.0",
-    "next-auth": "5.0.0-beta.25",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@rocketseat/eslint-config": "^2.2.2",
-    "@tailwindcss/postcss": "^4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.0",
-    "prisma": "6.4.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "@prisma/client",
-      "@prisma/engines",
-      "bcrypt",
-      "esbuild",
-      "prisma",
-      "sharp"
-    ]
-  }
+	"name": "saintcat-next",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@clerk/nextjs": "^6.12.4",
+		"@prisma/client": "6.4.1",
+		"@prisma/extension-accelerate": "^1.2.2",
+		"lucide-react": "^0.477.0",
+		"next": "15.2.0",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"zod": "^3.24.2"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"prisma": "6.4.1",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"@biomejs/biome",
+			"@clerk/shared",
+			"@prisma/client",
+			"@prisma/engines",
+			"argon2",
+			"bcrypt",
+			"esbuild",
+			"prisma",
+			"sharp"
+		]
+	}
 }
