--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@clerk/localizations": "^3.11.1",
 		"@clerk/nextjs": "^6.12.4",
+		"@clerk/themes": "^2.2.20",
 		"@prisma/client": "6.4.1",
 		"@prisma/extension-accelerate": "^1.2.2",
 		"lucide-react": "^0.477.0",
