--- a/package.json
+++ b/package.json
@@ -14,10 +14,19 @@
 		"@clerk/themes": "^2.2.20",
 		"@prisma/client": "6.4.1",
 		"@prisma/extension-accelerate": "^1.2.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.6",
+		"@radix-ui/react-separator": "^1.1.2",
+		"@radix-ui/react-slot": "^1.1.2",
+		"axios": "^1.8.3",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"lucide-react": "^0.477.0",
 		"next": "15.2.0",
+		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.0.2",
+		"tailwindcss-animate": "^1.0.7",
 		"zod": "^3.24.2"
 	},
 	"devDependencies": {
